fix: optimize Dockerfile for CI build